# ikarus-docker-container

./: .README  DockerFile  Dockerfile  README  README.md
.github/workflows/: build_docker_image_debian.yml  build_docker_image_debian_base.yml  build_docker_image_drybuild.yml  build_docker_image_dryrun.yml
Debian/: Dockerfile
Debian12/: Dockerfile
Debian12/patches/: CMakeLists.txt  MuesliConfig.cmake.in
DevelopContainer/: Dockerfile
DuneBase/: Dockerfile  entrypoint.sh
GrassHopperServer/: Dockerfile
InstalledContainer/: Dockerfile
SlimDevelopContainer/: Dockerfile
